# aika

./: .gitmodules  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  nginx.conf  search_config.json
.github/workflows/: cpp.yml
engine/: CMakeLists.txt
engine/src/: main.cpp
gui/: app.py  index.html
gui/static/js/: chessboard-1.0.0.min.js
src/: book_strategy.cpp  book_strategy.h  controller.cpp  controller.h  evaluation.cpp  evaluation.h  greedy_strategy.cpp  greedy_strategy.h  main.cpp  negamax_strategy.cpp  negamax_strategy.h  pst.cpp  pst.h  random_strategy.cpp  random_strategy.h  search_strategy.cpp  search_strategy.h  strategy.h  uci.cpp  util.cpp  util.h
src/search/: config.cpp  config.h  history_heuristics.cpp  history_heuristics.h  killer_moves.cpp  killer_moves.h  move_ordering.cpp  move_ordering.h  see.cpp  see.h  transposition_table.cpp  transposition_table.h
tests/: perfit.cpp  pst.cpp  search.cpp  see.cpp
tests/data/: arasan.epd  bratko_kopec.epd  custom.epd  eret.epd
tools/elo/: README.md  estimate.py  match.py
